# happy-rust

./: Cargo.toml  README.md
src/: happylog.rs  lib.rs
tests/: happylog.rs  lib.rs
